--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2024.1.1-beta-3"
+    id "com.diffplug.spotless" version "6.22.0"
 }
 
 java {
@@ -85,7 +86,11 @@ wpi.sim.addDriverstation()
 // in order to make them all available at runtime. Also adding the manifest so WPILib
 // knows where to look for our Robot Class.
 jar {
-    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+    from {
+        configurations.runtimeClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
     from sourceSets.main.allSource
     manifest edu.wpi.first.gradlerio.GradleRIOPlugin.javaManifest(ROBOT_MAIN_CLASS)
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
@@ -101,46 +106,89 @@ tasks.withType(JavaCompile) {
     options.compilerArgs.add '-XDstringConcat=inline'
 }
 
+spotless {
+    java {
+        target fileTree('.') {
+            include '**/*.java'
+            exclude '**/build/**', '**/build-*/**'
+        }
+        toggleOffOn()
+        googleJavaFormat()
+        removeUnusedImports()
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
+    groovyGradle {
+        target fileTree('.') {
+            include '**/*.gradle'
+            exclude '**/build/**', '**/build-*/**'
+        }
+        greclipse()
+        indentWithSpaces(4)
+        trimTrailingWhitespace()
+        endWithNewline()
+    }
+    format 'xml', {
+        target fileTree('.') {
+            include '**/*.xml'
+            exclude '**/build/**', '**/build-*/**'
+        }
+        eclipseWtp('xml')
+        trimTrailingWhitespace()
+        indentWithSpaces(2)
+        endWithNewline()
+    }
+    format 'misc', {
+        target fileTree('.') {
+            include '**/*.md', '**/.gitignore'
+            exclude '**/build/**', '**/build-*/**'
+        }
+        trimTrailingWhitespace()
+        indentWithSpaces(2)
+        endWithNewline()
+    }
+}
+
 tasks.register("writeBranchName") {
     // Define an output stream to write to instead of terminal
-   def stdout = new ByteArrayOutputStream()
+    def stdout = new ByteArrayOutputStream()
 
-   // Execute the git command
-   exec {
-      commandLine "git", "rev-parse", "--abbrev-ref", "HEAD"
-      // Write to the output stream instead of terminal
-      standardOutput = stdout
-   }
+    // Execute the git command
+    exec {
+        commandLine "git", "rev-parse", "--abbrev-ref", "HEAD"
+        // Write to the output stream instead of terminal
+        standardOutput = stdout
+    }
 
-   // Parse the output into a string
-   def branch = stdout.toString().trim()
+    // Parse the output into a string
+    def branch = stdout.toString().trim()
 
-   // Create a new file
-   new File(
-      // Join project directory and deploy directory
-      projectDir.toString() + "/src/main/deploy",
-      // File name to write to
-      "branch.txt"
-   ).text = branch // Set the contents of the file to the variable branch
+    // Create a new file
+    new File(
+            // Join project directory and deploy directory
+            projectDir.toString() + "/src/main/deploy",
+            // File name to write to
+            "branch.txt"
+            ).text = branch // Set the contents of the file to the variable branch
 }
 
 // run "writeBranchName" when code is built or deployed
 deploy.targets.roborio.artifacts.frcStaticFileDeploy.dependsOn(writeBranchName)
 
 tasks.register("writeCommitHash") {
-   def stdout = new ByteArrayOutputStream()
+    def stdout = new ByteArrayOutputStream()
 
-   exec {
-     commandLine "git", "rev-parse", "HEAD"
-     standardOutput = stdout
-   }
+    exec {
+        commandLine "git", "rev-parse", "HEAD"
+        standardOutput = stdout
+    }
 
-   def commitHash = stdout.toString().trim()
+    def commitHash = stdout.toString().trim()
 
-   new File(
-      projectDir.toString() + "/src/main/deploy",
-      "commit.txt"
-   ).text = commitHash
+    new File(
+            projectDir.toString() + "/src/main/deploy",
+            "commit.txt"
+            ).text = commitHash
 }
 
 // run "writeCommitHash" when code is built or deployed
